trunk/Archive/b8d3a6238465b38738b40b2919906532-8a676986784bd3a58ce3ec015645a41f/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:1:23: error: variable or field 'outputXML' declared void
 static void outputXML(StreamResult stream, Document doc) throws TransformerConfigurationException, TransformerException {
                       ^
main.cpp:1:23: error: 'StreamResult' was not declared in this scope
main.cpp:1:44: error: 'Document' was not declared in this scope
 static void outputXML(StreamResult stream, Document doc) throws TransformerConfigurationException, TransformerException {
                                            ^
